# Rust-Projects

WebRTC-in-Rust/wasm_client/src/: websockets.rs
rust-wasm-webgl/: Cargo.toml
rust_auth/: .env  Cargo.toml
rust_auth/migrations/: 20240326121154_init.up.sql
rust_auth/src/: handler.rs  jwt_auth.rs  main.rs
screen_orientation/screen_orientation/: Cargo.toml
screen_orientation/screen_orientation/src/: index.html  lib.rs
search_engine/: Cargo.toml
search_engine/backend/src/: lib.rs  main.rs  search.rs
search_engine/frontend/: index.html  searchbar.js
viewer_dashboard/: Cargo.toml
viewer_dashboard/src/: main.rs
viewer_dashboard/templates/: search.html
wasm-web-tool/: Cargo.toml  index.html
wasm_scrollbar/: Cargo.toml
wasm_scrollbar/src/: index.html  lib.rs
