[package]
name = "search_engine"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "search_engine"  
path = "backend/src/main.rs" 

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
xorf = "0.11.0" 
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
actix-web = "3.3"
actix-files = "0.4"
env_logger = "0.9"

[lib]
name = "search_engine"
path = "backend/src/lib.rs"
crate-type = ["cdylib", "rlib"]



